--- a/pki/src/main/resources/templates/accountVerified.html
+++ b/pki/src/main/resources/templates/accountVerified.html
@@ -7,7 +7,7 @@
         <center>
             <h3>Congratulations! Your account has been activated and email is verified!</h3>
             <br>
-            <a class="nav-link" href="/html/user/login.html">Log in</a>
+            <a class="nav-link" href="/html/login.html">Log in</a>
         </center>
     </body>
 </html>
